# KiraTrans

./: .gitignore  .prettierrc  LICENSE  README.md  package.json  vite.config.js
.github/workflows/: release.yml
src/: App.vue  index.html  jsconfig.json  main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: http_request.rs  lib.rs  screen_capture.rs
src/assets/: main.css  store-list.txt
src/components/: BackBar.vue  LanguageSelector.vue  Selector.vue  SettingsPage.vue  Toast.vue  TranslationPage.vue
src/i18n/: main.js
src/pages/: OCR.vue  ScreenAreaSelection.vue  Settings.vue  Translation.vue  TranslationPage.vue
src/pages/settings/: CommonSettings.vue  TranslationSettings.vue
src/router/: main.js
src/services/: store.js  translate.js
src/services/translate/: index.js  languages.js
src/services/translate/apis/: niutrans.js  tencent.js
