[package]
name = "kiratrans"
version = "0.0.1"
description = ""
authors = ["SeiyaCooper"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.7.0", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-store = "2.3.0"
xcap = "0.6.2"
ureq = { version = "3.1.2", features = ["json"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2.3.0"
tauri-plugin-clipboard-manager = "2"
tauri-plugin-single-instance = "2"
xcap = "0.6.2"
